--- a/rooke/src/main/resources/application.properties
+++ b/rooke/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/rooke?serverTimezo
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=1234
 spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
+
+mybatis.configuration.map-underscore-to-camel-case=true
