--- a/rooke/src/main/resources/application.properties
+++ b/rooke/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/rooke?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql://localhost:3306/rooke?serverTimezone=Asia/Seoul&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=1234
 spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
 
 mybatis.configuration.map-underscore-to-camel-case=true
+
