--- a/rooke/src/main/resources/application.properties
+++ b/rooke/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
 
 mybatis.configuration.map-underscore-to-camel-case=true
 
+#Gson HTTP Message Converter 설정
+spring.mvc.converters.preferred-json-mapper=gson	#Spring Boot Version >= 2.7.0 RELEASE
+spring.http.converters.preferred-json-mapper=gson	#Spring Boot Version < 2.7.0 RELEASE
+
