--- a/rooke/build.gradle
+++ b/rooke/build.gradle
@@ -26,12 +26,17 @@ dependencies {
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect' /* Thymeleaf Layout */
 	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'  /* Log4JDBC */
 	implementation 'com.google.code.gson:gson:2.8.6' /*Gson*/
+	implementation 'commons-io:commons-io:2.6'	
+	implementation 'commons-fileupload:commons-fileupload:1.4'
+	
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	
+	
 }
 
 tasks.named('test') {
