--- a/rooke/build.gradle
+++ b/rooke/build.gradle
@@ -22,12 +22,17 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2' /*:2.2.2*/
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect' /* Thymeleaf Layout */
 	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'  /* Log4JDBC */
 	implementation 'com.google.code.gson:gson:2.8.6' /*Gson*/
-	implementation 'commons-io:commons-io:2.6'	
-	implementation 'commons-fileupload:commons-fileupload:1.4'
+	// https://mavenlibs.com/maven/dependency/commons-io/commons-io
+	// https://mavenlibs.com/maven/dependency/commons-io/commons-io
+	implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'	
+	// https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload
+	implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4'
+
 	
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
